[gd_scene load_steps=18 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Mob.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://art/House In a Forest Loop.ogg" type="AudioStream" id=5]
[ext_resource path="res://art/gameover.wav" type="AudioStream" id=6]
[ext_resource path="res://art/chars/something0.png" type="Texture" id=7]
[ext_resource path="res://art/griddvsd1280-720.png" type="Texture" id=8]
[ext_resource path="res://Something.tscn" type="PackedScene" id=9]
[ext_resource path="res://Zombie.tscn" type="PackedScene" id=10]
[ext_resource path="res://art/chars/p0_1.png" type="Texture" id=11]
[ext_resource path="res://art/zombies/Player_Free/Idle/0091.png" type="Texture" id=12]
[ext_resource path="res://art/chars/p0_0_idle_0.png" type="Texture" id=13]
[ext_resource path="res://art/zombies/Player_Free/Idle_Shoot/0074.png" type="Texture" id=14]
[ext_resource path="res://art/zombies/Player_Free/Run_Shoot/0042.png" type="Texture" id=15]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 738, 349, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 313, 358, 0, 0, 0, 0, 0, 0 )
}

[sub_resource type="Curve2D" id=2]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 1367, 257, 0, 0, 0, 0, -61, 257 )
}

[node name="Main" type="Node"]
script = ExtResource( 1 )
mob_scene = ExtResource( 2 )
zombie_scene = ExtResource( 10 )
something_0 = ExtResource( 9 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 800.0
color = Color( 0.219608, 0.372549, 0.380392, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Player" parent="." instance=ExtResource( 3 )]

[node name="MobTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 240, 450 )

[node name="MobPath" type="Path2D" parent="."]
position = Vector2( 16, -4 )
curve = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="ZombiePath_0" type="Path2D" parent="."]
curve = SubResource( 2 )

[node name="PathFollow2D" type="PathFollow2D" parent="ZombiePath_0"]
position = Vector2( 1367, 257 )
rotation = 3.14159

[node name="ZombiePath_1" type="Path2D" parent="."]
curve = SubResource( 2 )

[node name="PathFollow2D" type="PathFollow2D" parent="ZombiePath_1"]
position = Vector2( 1367, 257 )
rotation = 3.14159

[node name="Background" type="TextureRect" parent="."]
margin_right = 1360.0
margin_bottom = 768.0
texture = ExtResource( 8 )
stretch_mode = 3
__meta__ = {
"_edit_lock_": true
}

[node name="DefenseGroup" type="Node2D" parent="."]
z_index = 3
__meta__ = {
"_edit_lock_": true
}

[node name="Something1" type="TextureRect" parent="DefenseGroup"]
margin_top = 100.0
margin_right = 100.0
margin_bottom = 202.0
texture = ExtResource( 11 )

[node name="Something0" type="TextureRect" parent="DefenseGroup"]
margin_right = 100.0
margin_bottom = 100.0
mouse_default_cursor_shape = 6
texture = ExtResource( 7 )
stretch_mode = 6

[node name="Something2" type="TextureRect" parent="DefenseGroup"]
margin_top = 202.0
margin_right = 128.0
margin_bottom = 330.0
texture = ExtResource( 12 )

[node name="Something3" type="TextureRect" parent="DefenseGroup"]
margin_top = 302.0
margin_right = 100.0
margin_bottom = 402.0
texture = ExtResource( 12 )

[node name="Something4" type="TextureRect" parent="DefenseGroup"]
margin_top = 402.0
margin_right = 100.0
margin_bottom = 502.0
texture = ExtResource( 15 )

[node name="Something5" type="TextureRect" parent="DefenseGroup"]
margin_top = 502.0
margin_right = 100.0
margin_bottom = 602.0
texture = ExtResource( 11 )

[node name="Something6" type="TextureRect" parent="DefenseGroup"]
margin_top = 602.0
margin_right = 100.0
margin_bottom = 702.0
texture = ExtResource( 14 )

[node name="SomethingMouseFollower" type="TextureRect" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
texture = ExtResource( 13 )

[connection signal="mouse_entered" from="ColorRect" to="." method="_onMouseMove"]
[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
[connection signal="gui_input" from="Background" to="." method="_onMouseMove"]
[connection signal="gui_input" from="DefenseGroup/Something1" to="." method="_on_Something1_gui_input"]
[connection signal="gui_input" from="DefenseGroup/Something0" to="." method="_on_Something0_gui_input"]
[connection signal="mouse_entered" from="DefenseGroup/Something0" to="." method="_on_Something0_mouse_entered"]
[connection signal="gui_input" from="DefenseGroup/Something2" to="." method="_on_Something2_gui_input"]
[connection signal="gui_input" from="DefenseGroup/Something3" to="." method="_on_Something3_gui_input"]
[connection signal="gui_input" from="DefenseGroup/Something4" to="." method="_on_Something4_gui_input"]
[connection signal="gui_input" from="DefenseGroup/Something5" to="." method="_on_Something5_gui_input"]
[connection signal="gui_input" from="DefenseGroup/Something6" to="." method="_onSomethingClick"]
